[project]
name = "comfyui-upscaler-4k"
description = "ComfyUI node that enhances image upscaling quality with an adjustable intensity slider (0-5)"
version = "1.0.4"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests>=2.0"]

[project.urls]
Repository = "https://github.com/lonemilk/ComfyUI-Upscaler-4K"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/lonemilk/ComfyUI-Upscaler-4K/wiki"
"Bug Tracker" = "https://github.com/lonemilk/ComfyUI-Upscaler-4K/issues"

[tool.comfy]
PublisherId = "lonemilk"
DisplayName = "ComfyUI-Upscaler-4K"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

[tool.comfy.node_list]
Upscaler_4K = "FrameUpscale.py::Upscaler_4K"



